<resources>
    <string name="app_name">Dream Unit</string>
    <string name="img_description">image</string>
    <string name="add_to_favorite">В избранное</string>
    <string name="search">Поиск</string>
    <string name="favorite">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="hint_name">Имя</string>
    <string name="hint_email">Е-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_address">Адрес</string>
    <string name="hint_birthday">Дата рождения</string>
    <string name="hint_gender">Пол:</string>
    <string name="sign_up">Регистрация</string>
    <string name="confirmPassword">Повторите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="registration_message">Вы успешно зарегистрировались!</string>
    <string name="email_already_exists">Этот e-mail уже существует.</string>
    <string name="fields_incorrect_message">Неверно заполнены поля.</string>
    <string name="welcome_message">Рады видеть вас снова!</string>
    <string name="incorrect_email_password">Неверный e-mail или пароль.</string>
    <string name="log_out">Выйти</string>
    <string name="connection_error">Ошибка подключения.</string>
    <string name="retry">Повторить</string>
    <string name="update">Сохранить</string>
    <string name="currency">тг.</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="save_data_message">Данные успешно сохранены</string>
    <string name="confidence_save_data_message">Сохранить данные?</string>
    <string name="save">Сохранить</string>
    <string name="incorrect_email">Укажите корректный e-mail.</string>
    <string name="no_chosen_gender">Не выбран</string>
    <string name="choose_date">Выберите дату</string>
    <string name="contact_phone">Контактный телефон</string>
    <string name="cancel">Отмена</string>
    <string name="category">Категория:</string>
    <string name="brand">Бренд:</string>
    <string name="find">Найти</string>
    <string name="speed">Частота (GHz):</string>
    <string name="cores_amount">Кол-во ядер:</string>
    <string name="series">Серия:</string>
    <string name="price">Цена (тг):</string>
    <string name="from">От:</string>
    <string name="to">До:</string>
    <string name="thousand">тыс.</string>
    <string name="memory">Объем памяти (GB):</string>
    <string name="all_brands">Все бренды</string>
    <string name="all_types">Все типы</string>
    <string name="ram_capacity">Объем RAM:</string>
    <string name="ram_type">Тип RAM:</string>
    <string name="usb_amount">Кол-во USB:</string>
    <string name="type">Тип:</string>
    <string name="ram_speed">Частота (MHz):</string>
    <string name="psu_power">Мощность (W):</string>
    <string name="energy_efficiency">Энергоэффективность:</string>
    <string name="cpu">Процессор</string>
    <string name="video_card">Видео карта</string>
    <string name="mobo">Материнская плата</string>
    <string name="ram">Оперативная память</string>
    <string name="psu">Блок питания</string>
    <string name="name">Наименование:</string>
    <string name="threads_amount">Кол-во потоков:</string>
    <string name="turbo">Турбо:</string>
    <string name="tdp">TDP:</string>
    <string name="socket">Сокет:</string>
    <string name="gen">Поколение:</string>
    <string name="core_clock">Частота видео ядра (MHz):</string>
    <string name="gpu">GPU:</string>
    <string name="timing">Тайминги:</string>
    <string name="cas">CAS:</string>
    <string name="chipset">Чипсет:</string>
    <string name="pci_amount">Кол-во PCI:</string>
    <string name="price_two">Цена:</string>
    <string name="fans_amount">Кол-во вентиляторов:</string>
    <string name="weight">Вес (lb):</string>
    <string name="part_added">Товар успешно добавлен.</string>
    <string name="already_added">Товар уже есть в избранных.</string>
    <string name="remove">Удалить</string>
    <string name="price_lower">Цена ниже</string>
    <string name="price_higher">Цена выше</string>
    <string name="video_cards">Видео карты</string>
    <string name="cpus">Процессоры</string>
    <string name="mobos">Материнские платы</string>
    <string name="psus">Блоки питания</string>
    <string name="part_removed">Товар удален.</string>
    <string name="details">Подробности</string>
    <string name="order">Заказать</string>
    <string name="add_to_assembly">Добавить в мою сборку</string>
    <string name="order_good_message">Вы успешно заказали товар.</string>
    <string name="user_info">Мои данные</string>
    <string name="orders">Заказы</string>
    <string name="close">Закрыть</string>
    <string name="order_details">Детали заказа</string>
    <string name="goods">Товар:</string>
    <string name="order_date">Дата заказа:</string>
    <string name="status">Статус:</string>
    <string name="assembly">Сборка</string>
    <string name="sample">Sample</string>
    <string name="empty">Пусто</string>
    <string name="update_assembly">Ваша сборка изменена.</string>
    <string name="order_assembly">Заказать сборку</string>
    <string name="sum">Общая сумма:</string>
    <string name="OK">OK</string>
    <string name="amount_choice">Выберите кол-во товара</string>
    <string name="goods_amount">Кол-во товара:</string>
    <string name="amount">Количество:</string>
    <string name="assembly_not_complete">Сборка не завершена.</string>
    <string name="success_assembly_order">Вы успешно заказали сборку.</string>
    <string name="amt">шт.</string>
    <array name="categories">
        <item>Не выбрана</item>
        <item>Процессоры</item>
        <item>Видео карты</item>
        <item>Материнские платы</item>
        <item>Оперативная память</item>
        <item>Блоки питания</item>
    </array>
    <array name="cpu_brands">
        <item>@string/all_brands</item>
        <item>Intel</item>
        <item>AMD</item>
    </array>
    <array name="video_card_brands">
        <item>@string/all_brands</item>
        <item>AMD</item>
        <item>ASUS</item>
        <item>EVGA</item>
        <item>GIGABYTE</item>
        <item>MSI</item>
        <item>PNY</item>
        <item>ZOTAC</item>
    </array>
    <array name="mobo_brands">
        <item>@string/all_brands</item>
        <item>ASUS</item>
        <item>GIGABYTE</item>
        <item>MSI</item>
        <item>ASROCK</item>
        <item>EVGA</item>
        <item>BIOSTAR</item>
    </array>
    <array name="ram_brands">
        <item>@string/all_brands</item>
        <item>G.SKILL</item>
        <item>CORSAIR</item>
        <item>TEAM</item>
    </array>
    <array name="psu_brands">
        <item>@string/all_brands</item>
        <item>CORSAIR</item>
        <item>EVGA</item>
        <item>ENERMAX</item>
        <item>ROSEWILL</item>
        <item>SILVERSTONE</item>
    </array>
    <array name="intel_series">
        <item>Все серии</item>
        <item>Celeron</item>
        <item>Pentium</item>
        <item>i3</item>
        <item>i5</item>
        <item>i7</item>
        <item>i9</item>
    </array>
    <array name="AMD_series">
        <item>Все серии</item>
        <item>ThreadRipper</item>
        <item>Ryzen 3</item>
        <item>Ryzen 5</item>
        <item>Ryzen 7</item>
    </array>
    <array name="ram_types">
        <item>@string/all_types</item>
        <item>DDR4</item>
        <item>DDR3</item>
    </array>
    <array name="ram_types_detail">
        <item>@string/all_types</item>
        <item>240-Pin DDR3</item>
        <item>288-Pin DDR4</item>
    </array>
    <array name="psu_energy_efficiencies">
        <item>@string/all_types</item>
        <item>80 plus white</item>
        <item>80 plus bronze</item>
        <item>80 plus silver</item>
        <item>80 plus gold</item>
        <item>80 plus platinum</item>
        <item>80 plus titanium</item>
    </array>
    <array name="price_values">
        <item>0</item>
        <item>100</item>
    </array>
    <array name="ram_power_values">
        <item>500</item>
        <item>1000</item>
    </array>
</resources>