<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.navigation.FavoriteFragment">
    <HorizontalScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgFavorites"
        android:padding="5dp"
        app:singleSelection="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.chip.Chip
            android:id="@+id/cpuChip"
            android:checkable="true"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/chip_stroke"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@color/chip_background"
            android:textColor="@color/chip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpus"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/videoCardChip"
            android:checkable="true"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/chip_stroke"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@color/chip_background"
            android:textColor="@color/chip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_cards"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/moboChip"
            android:checkable="true"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/chip_stroke"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@color/chip_background"
            android:textColor="@color/chip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobos"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/ramChip"
            android:checkable="true"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/chip_stroke"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@color/chip_background"
            android:textColor="@color/chip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ram"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/psuChip"
            android:checkable="true"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/chip_stroke"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@color/chip_background"
            android:textColor="@color/chip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psus"/>
    </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/layoutFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavorites"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>